; ModuleID = '/home/carl/AnghaBench/tig/src/extr_io.c_io_load.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_io.c_io_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @io_load(%struct.io* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.io*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.io* %0, %struct.io** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load %struct.io*, %struct.io** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @io_load_file(%struct.io* %9, i8* %10, i32* null, i32 %11, i8* %12)
  ret i32 %13
}

declare dso_local i32 @io_load_file(%struct.io*, i8*, i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
